syntax = "proto3";
package user_profile;

option go_package = "nfxid/protos/gen/directory/user_profile;userprofilepb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// 用户资料信息
// Note: id directly references users.id (one-to-one relationship)
message UserProfile {
  string id = 1;                           // 资料ID (UUID) - 直接引用 users.id
  optional string role = 2;                // 角色 (varchar(100))
  optional string first_name = 3;          // 名 (varchar(100))
  optional string last_name = 4;           // 姓 (varchar(100))
  optional string nickname = 5;            // 昵称 (varchar(50))
  optional string display_name = 6;        // 显示名称 (varchar(100))
  optional string bio = 7;                // 简介 (text)
  optional google.protobuf.Timestamp birthday = 8; // 生日 (date)
  optional int32 age = 9;                 // 年龄 (integer)
  optional string gender = 10;             // 性别 (varchar(20))
  optional string location = 11;           // 位置 (varchar(255))
  optional string website = 12;            // 网站 (varchar(255))
  optional string github = 13;             // GitHub (varchar(255))
  optional google.protobuf.Struct social_links = 14; // 社交链接 (JSONB)
  optional google.protobuf.Struct skills = 15;      // 技能 (JSONB)
  google.protobuf.Timestamp created_at = 16;        // 创建时间
  google.protobuf.Timestamp updated_at = 17;        // 更新时间
  optional google.protobuf.Timestamp deleted_at = 18; // 软删除时间
}

// UserProfile 服务 - 供其他服务通过 gRPC 管理用户资料
service UserProfileService {
  // 创建用户资料
  rpc CreateUserProfile (CreateUserProfileRequest) returns (CreateUserProfileResponse);
  
  // 根据ID获取用户资料
  rpc GetUserProfileByID (GetUserProfileByIDRequest) returns (GetUserProfileByIDResponse);
  
  // 根据用户ID获取用户资料
  rpc GetUserProfileByUserID (GetUserProfileByUserIDRequest) returns (GetUserProfileByUserIDResponse);
  
  // 批量获取用户资料
  rpc BatchGetUserProfiles (BatchGetUserProfilesRequest) returns (BatchGetUserProfilesResponse);
}

// UserProfile Service Messages
message CreateUserProfileRequest {
  string id = 1;                         // 用户ID (UUID) - 直接引用 users.id
  optional string role = 2;               // 角色 (varchar(100))
  optional string first_name = 3;         // 名 (varchar(100))
  optional string last_name = 4;         // 姓 (varchar(100))
  optional string nickname = 5;          // 昵称 (varchar(50))
  optional string display_name = 6;      // 显示名称 (varchar(100))
  optional string bio = 7;              // 简介 (text)
  optional google.protobuf.Timestamp birthday = 8; // 生日 (date)
  optional int32 age = 9;               // 年龄 (integer)
  optional string gender = 10;           // 性别 (varchar(20))
  optional string location = 11;         // 位置 (varchar(255))
  optional string website = 12;         // 网站 (varchar(255))
  optional string github = 13;          // GitHub (varchar(255))
  optional google.protobuf.Struct social_links = 14; // 社交链接 (JSONB)
  optional google.protobuf.Struct skills = 15;       // 技能 (JSONB)
}

message CreateUserProfileResponse {
  UserProfile user_profile = 1;
}

message GetUserProfileByIDRequest {
  string id = 1;
}

message GetUserProfileByIDResponse {
  UserProfile user_profile = 1;
}

message GetUserProfileByUserIDRequest {
  string user_id = 1;
}

message GetUserProfileByUserIDResponse {
  UserProfile user_profile = 1;
}

message BatchGetUserProfilesRequest {
  repeated string ids = 1;
}

message BatchGetUserProfilesResponse {
  repeated UserProfile user_profiles = 1;
}
